--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".MainActivity">
+    tools:context=".menu.MainActivity">
 
     <ImageButton
         android:id="@+id/fleche_gauche"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/game_title"
-        android:textSize="50sp"
+        android:textSize="49sp"
         android:fontFamily="@font/title_font"
         android:layout_gravity="top"
         android:textColor="@color/black"
