--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".menu.MainActivity">
+    android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/fleche_gauche"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:background="@drawable/fleche_gauche"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-    <ImageButton
-        android:id="@+id/fleche_droite"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:background="@drawable/fleche_droite"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <TextView
-        android:id="@+id/menu_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/game_title"
-        android:textSize="49sp"
-        android:fontFamily="@font/title_font"
-        android:layout_gravity="top"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/fleche_gauche"
-        app:layout_constraintRight_toLeftOf="@id/fleche_droite"/>
-    <TextView
-        android:id="@+id/world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/world"
-        android:fontFamily="@font/dogicapixelbold"
-        android:textSize="35sp"
-        app:layout_constraintTop_toBottomOf="@id/menu_title"
-        app:layout_constraintLeft_toRightOf="@id/fleche_gauche"
-        app:layout_constraintRight_toLeftOf="@id/fleche_droite"/>
-    <LinearLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mainmenu_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/gray">
+    </androidx.fragment.app.FragmentContainerView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@drawable/menubar_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center">
+        tools:context=".menu.MainActivity">
 
-        <ImageView
-            android:id="@+id/menu_char_set_icon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+        <ImageButton
+            android:id="@+id/fleche_gauche"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/fleche_gauche"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageButton
+            android:id="@+id/fleche_droite"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/fleche_droite"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/menu_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/game_title"
+            android:textSize="45sp"
+            android:fontFamily="@font/title_font"
+            android:layout_gravity="top"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/fleche_gauche"
+            app:layout_constraintRight_toLeftOf="@id/fleche_droite"/>
+        <TextView
+            android:id="@+id/world"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/world"
+            android:fontFamily="@font/dogicapixelbold"
+            android:textSize="25sp"
+            app:layout_constraintTop_toBottomOf="@id/menu_title"
+            app:layout_constraintLeft_toRightOf="@id/fleche_gauche"
+            app:layout_constraintRight_toLeftOf="@id/fleche_droite" />
+        <LinearLayout
+            android:id="@+id/bottom_bar_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/menu_char_set_icon"
+                android:layout_width="100dp"
+                android:layout_height="100dp"/>
+            <Button
+                android:id="@+id/play_button"
+                android:background="@drawable/menu_button_shape"
+                android:text="Play"
+                android:textSize="35sp"
+                android:fontFamily="@font/dogicabold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/parametres_menu"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/settings"
+                android:background="@drawable/setting_button_style"/>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/settings_layout"
+        android:layout_gravity="center"
+        android:layout_width="500dp"
+        android:layout_height="370dp"
+        android:orientation="vertical"
+        android:background="@color/dark_gray">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Settings"
+                android:layout_gravity="left"
+                style="@style/title_setting_label"/>
+            <ImageButton
+                android:id="@+id/close_setting_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center_vertical"
+                android:background="@color/dark_gray"
+                android:src="@drawable/croix2"
+                android:maxHeight="100dp"
+                android:maxWidth="100dp"/>
+        </LinearLayout>
+        <TwoLineListItem
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/white"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <TextView
+                android:text="Joystick"
+                style="@style/setting_label"
+                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Switch
+                android:id="@+id/joystick_switch_setting"
+                android:layout_weight="1"
+                android:layout_marginRight="50dp"
+                android:layout_width="70dp"
+                android:layout_height="40dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <TextView
+                android:text="Effets sonores"
+                style="@style/setting_label"
+                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Switch
+                android:id="@+id/soundeffect_switch_setting"
+                android:layout_weight="1"
+                android:layout_marginRight="50dp"
+                android:layout_width="70dp"
+                android:layout_height="40dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <TextView
+                android:text="Musique"
+                style="@style/setting_label"
+                android:layout_width="wrap_content"
+                android:layout_weight="0"
+                android:layout_height="wrap_content"/>
+            <Switch
+                android:id="@+id/musique_switch_setting"
+                android:layout_weight="1"
+                android:layout_marginRight="50dp"
+                android:layout_width="70dp"
+                android:layout_height="40dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <TextView
+                android:text="Personnage"
+                style="@style/setting_label"
+                android:layout_width="wrap_content"
+                android:layout_weight="0"
+                android:layout_height="wrap_content"/>
+            <Switch
+                android:id="@+id/personnage_switch_setting"
+                android:thumb="@drawable/thump_selector_character_selecting_switchbutton"
+                android:layout_weight="1"
+                android:layout_marginRight="50dp"
+                android:layout_width="70dp"
+                android:layout_height="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <TextView
+                android:text="Restaurer par défaut"
+                style="@style/setting_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageButton
+                android:id="@+id/restore_default_settings_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@color/dark_gray"
+                android:layout_marginRight="50dp"
+                android:src="@drawable/rafraichir1"
+                android:scaleType="fitCenter"/>
+        </LinearLayout>
+
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageButton
-            android:id="@+id/parametres_menu"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/settings"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Supprimer le compte"
+            android:textSize="15sp"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"/>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
