--- a/app/src/main/res/layout/abstract_fragment_layout.xml
+++ b/app/src/main/res/layout/abstract_fragment_layout.xml
@@ -36,8 +36,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/boxLayout_fragment"
-        app:layout_constraintBottom_toTopOf="@id/floorlayout_fragment"
-        app:layout_constraintLeft_toRightOf="@id/player_layout"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintVertical_weight="4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/castle_layout_fragment"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
     </LinearLayout>
