--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,18 +37,15 @@
 
         <ImageButton
             android:id="@+id/parametres_menu"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:scaleType="centerInside"
-            android:src="@drawable/bloc"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="@+id/fleche_droite"
-            app:layout_constraintHorizontal_bias="0.023"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/fleche_gauche"
+            android:src="@drawable/settings"
+            android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.056" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.056"
+            app:layout_constraintHorizontal_bias="0.023" />
 
         <TextView
             android:id="@+id/menu_title"
@@ -73,27 +70,32 @@
             app:layout_constraintTop_toBottomOf="@id/menu_title"
             app:layout_constraintLeft_toRightOf="@id/fleche_gauche"
             app:layout_constraintRight_toLeftOf="@id/fleche_droite" />
+
         <LinearLayout
             android:id="@+id/bottom_bar_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:gravity="center">
+            tools:layout_editor_absoluteX="0dp">
 
-            <ImageView
-                android:id="@+id/menu_char_set_icon"
-                android:layout_width="100dp"
-                android:layout_height="100dp"/>
             <Button
                 android:id="@+id/play_button"
+                android:layout_width="180dp"
+                android:layout_height="89dp"
                 android:background="@drawable/menu_button_shape"
+                android:fontFamily="@font/dogicabold"
                 android:text="Play"
                 android:textSize="35sp"
-                android:fontFamily="@font/dogicabold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
