--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,35 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="30dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/world">
+            <TextView
+                android:id="@+id/score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Score : "
+                android:fontFamily="@font/dogicapixel"
+                android:textSize="20sp"/>
+            <View
+                android:layout_width="100dp"
+                android:layout_height="0dp"
+                android:layout_weight="0"
+                />
+            <TextView
+                android:id="@+id/score_piece"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pieces : "
+                android:fontFamily="@font/dogicapixel"
+                android:textSize="20sp"/>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:id="@+id/settings_layout"
